Fix tab button icon on input blocks on mobile

--- a/client/src/input/styles/input.scss
+++ b/client/src/input/styles/input.scss
@@ -214,7 +214,7 @@ $preview-reduction: 70px;
                     .tabs_btn {
                         position: absolute;
                         top: 0;
-                        display: block;
+                        display: inline-flex;
                         cursor: pointer;
                         height: 30px;
                         padding: 0 9px;
